--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -24,6 +24,7 @@
     <ClInclude Include="include\utility\utility.hpp" />
     <ClInclude Include="input\Keyboard.hpp" />
     <ClInclude Include="input\Mouse.hpp" />
+    <ClInclude Include="render\Graphics\DXShaders\BaseShader.hpp" />
     <ClInclude Include="render\Graphics\EngineCamera.hpp" />
     <ClInclude Include="render\Graphics\CBStructs.hpp" />
     <ClInclude Include="render\Graphics\ConstantBuffer.hpp" />
@@ -33,10 +34,10 @@
     <ClInclude Include="render\D3D\d3d.hpp" />
     <ClInclude Include="render\Graphics\IndexBuffer.hpp" />
     <ClInclude Include="render\Graphics\InstanceBuffer.hpp" />
-    <ClInclude Include="render\Graphics\PixelShader.hpp" />
+    <ClInclude Include="render\Graphics\DXShaders\PixelShader.hpp" />
     <ClInclude Include="render\Graphics\Vertex.hpp" />
     <ClInclude Include="render\Graphics\VertexBuffer.hpp" />
-    <ClInclude Include="render\Graphics\VertexShader.hpp" />
+    <ClInclude Include="render\Graphics\DXShaders\VertexShader.hpp" />
     <ClInclude Include="render\Objects\Model.hpp" />
     <ClInclude Include="render\RayTracer\Camera\Camera.h" />
     <ClInclude Include="render\RayTracer\Lighting\Lights.h" />
@@ -69,10 +70,11 @@
     <ClCompile Include="input\Keyboard.cpp" />
     <ClCompile Include="input\Mouse.cpp" />
     <ClCompile Include="render\D3D\d3d.cpp" />
+    <ClCompile Include="render\Graphics\DXShaders\BaseShader.cpp" />
     <ClCompile Include="render\Graphics\EngineCamera.cpp" />
     <ClCompile Include="render\Graphics\IndexBuffer.cpp" />
-    <ClCompile Include="render\Graphics\PixelShader.cpp" />
-    <ClCompile Include="render\Graphics\VertexShader.cpp" />
+    <ClCompile Include="render\Graphics\DXShaders\PixelShader.cpp" />
+    <ClCompile Include="render\Graphics\DXShaders\VertexShader.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="render\Objects\Model.cpp" />
     <ClCompile Include="render\RayTracer\Camera\Camera.cpp" />
