--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -186,6 +186,9 @@
     <ClInclude Include="render\Graphics\DXShaders\BaseShader.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="render\Graphics\DXShaders\GeometryShader.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="render\D3D\d3d.cpp">
@@ -287,6 +290,9 @@
     <ClCompile Include="render\Graphics\DXShaders\BaseShader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="render\Graphics\DXShaders\GeometryShader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="render\Graphics\shaders\VSBasicColor.hlsl">
@@ -295,8 +301,12 @@
     <FxCompile Include="render\Graphics\shaders\PSVoronoi.hlsl">
       <Filter>Resource Files</Filter>
     </FxCompile>
-    <FxCompile Include="render\Graphics\shaders\PSHologram.hlsl" />
-    <FxCompile Include="render\Graphics\shaders\VSHologram.hlsl" />
+    <FxCompile Include="render\Graphics\shaders\hologram\PSHologram.hlsl" />
+    <FxCompile Include="render\Graphics\shaders\hologram\VSHologram.hlsl" />
     <FxCompile Include="render\Graphics\shaders\PSBasicColor.hlsl" />
+    <FxCompile Include="render\Graphics\shaders\hologram\GSHologram.hlsl" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="render\Graphics\shaders\hologram\HologramInclude.hlsli" />
   </ItemGroup>
 </Project>
