Tesselating based on worldspace size but unoptimized

--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -219,6 +219,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="render\Graphics\shaders\hologram\HologramInclude.hlsli" />
+    <None Include="render\Graphics\shaders\hologram\HologramStructs.hlsli" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
