--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -198,6 +198,9 @@
     <ClInclude Include="render\Systems\Pipeline.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="render\Graphics\HelperStructs.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="render\D3D\d3d.cpp">
