Moved buffer wrappers to aseparate folder

--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -29,18 +29,18 @@
     <ClInclude Include="render\Graphics\DXShaders\GeometryShader.hpp" />
     <ClInclude Include="render\Graphics\DXShaders\HullShader.hpp" />
     <ClInclude Include="render\Graphics\EngineCamera.hpp" />
-    <ClInclude Include="render\Graphics\CBStructs.hpp" />
-    <ClInclude Include="render\Graphics\ConstantBuffer.hpp" />
+    <ClInclude Include="render\Graphics\DXBuffers\CBStructs.hpp" />
+    <ClInclude Include="render\Graphics\DXBuffers\ConstantBuffer.hpp" />
     <ClInclude Include="render\Graphics\HelperStructs.hpp" />
     <ClInclude Include="render\Graphics\Renderer.hpp" />
     <ClInclude Include="include\win_def.hpp" />
     <ClInclude Include="include\win_undef.hpp" />
     <ClInclude Include="render\D3D\d3d.hpp" />
-    <ClInclude Include="render\Graphics\IndexBuffer.hpp" />
-    <ClInclude Include="render\Graphics\InstanceBuffer.hpp" />
+    <ClInclude Include="render\Graphics\DXBuffers\IndexBuffer.hpp" />
+    <ClInclude Include="render\Graphics\DXBuffers\InstanceBuffer.hpp" />
     <ClInclude Include="render\Graphics\DXShaders\PixelShader.hpp" />
     <ClInclude Include="render\Graphics\Vertex.hpp" />
-    <ClInclude Include="render\Graphics\VertexBuffer.hpp" />
+    <ClInclude Include="render\Graphics\DXBuffers\VertexBuffer.hpp" />
     <ClInclude Include="render\Graphics\DXShaders\VertexShader.hpp" />
     <ClInclude Include="render\Objects\Model.hpp" />
     <ClInclude Include="render\RayTracer\Camera\Camera.h" />
@@ -80,7 +80,7 @@
     <ClCompile Include="render\Graphics\DXShaders\GeometryShader.cpp" />
     <ClCompile Include="render\Graphics\DXShaders\HullShader.cpp" />
     <ClCompile Include="render\Graphics\EngineCamera.cpp" />
-    <ClCompile Include="render\Graphics\IndexBuffer.cpp" />
+    <ClCompile Include="render\Graphics\DXBuffers\IndexBuffer.cpp" />
     <ClCompile Include="render\Graphics\DXShaders\PixelShader.cpp" />
     <ClCompile Include="render\Graphics\DXShaders\VertexShader.cpp" />
     <ClCompile Include="Engine.cpp" />
