--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -174,6 +174,12 @@
     <ClInclude Include="render\Objects\SkyTriangle\SkyTriangle.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="render\Systems\LightSystem.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="render\Systems\LightStructs.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="render\D3D\d3d.cpp">
@@ -260,6 +266,9 @@
     <ClCompile Include="render\Objects\SkyTriangle\SkyTriangle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="render\Systems\LightSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="render\Graphics\shaders\normal\VSBasicColor.hlsl">
@@ -291,5 +300,6 @@
     <None Include="render\Graphics\shaders\normal_visualization\VisNormalStructs.hlsli" />
     <None Include="render\Graphics\shaders\wireframe_visualization\VisWireframeStructs.hlsli" />
     <None Include="render\Graphics\shaders\globals.hlsli" />
+    <None Include="render\Graphics\shaders\lighting.hlsli" />
   </ItemGroup>
 </Project>
