--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -183,6 +183,9 @@
     <ClInclude Include="render\Systems\TransformSystem.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="utils\SolidVector\SolidVector.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="render\D3D\d3d.cpp">
