--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -24,6 +24,8 @@
     <ClInclude Include="include\utility\utility.hpp" />
     <ClInclude Include="input\Keyboard.hpp" />
     <ClInclude Include="input\Mouse.hpp" />
+    <ClInclude Include="render\Graphics\DXRTVs\HDRRenderTarget.hpp" />
+    <ClInclude Include="render\Graphics\DXRTVs\LDRRenderTarget.hpp" />
     <ClInclude Include="render\Graphics\DXShaders\BaseShader.hpp" />
     <ClInclude Include="render\Graphics\DXShaders\DomainShader.hpp" />
     <ClInclude Include="render\Graphics\DXShaders\GeometryShader.hpp" />
@@ -70,6 +72,8 @@
     <ClCompile Include="input\Keyboard.cpp" />
     <ClCompile Include="input\Mouse.cpp" />
     <ClCompile Include="render\D3D\d3d.cpp" />
+    <ClCompile Include="render\Graphics\DXRTVs\HDRRenderTarget.cpp" />
+    <ClCompile Include="render\Graphics\DXRTVs\LDRRenderTarget.cpp" />
     <ClCompile Include="render\Graphics\DXShaders\BaseShader.cpp" />
     <ClCompile Include="render\Graphics\DXShaders\DomainShader.cpp" />
     <ClCompile Include="render\Graphics\DXShaders\GeometryShader.cpp" />
