--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -438,7 +438,8 @@
     <None Include="render\Graphics\shaders\globals.hlsli" />
     <None Include="render\Graphics\shaders\hologram\HologramInclude.hlsli" />
     <None Include="render\Graphics\shaders\hologram\HologramStructs.hlsli" />
-    <None Include="render\Graphics\shaders\lighting.hlsli" />
+    <None Include="render\Graphics\shaders\lighting_blinn_phong.hlsli" />
+    <None Include="render\Graphics\shaders\lighting_cook_torrance.hlsli" />
     <None Include="render\Graphics\shaders\normal\BasicColorStructs.hlsli" />
     <None Include="render\Graphics\shaders\utility.hlsli" />
     <None Include="render\Graphics\shaders\wireframe_visualization\VisWireframeStructs.hlsli" />
